--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" style="width:100%; height:100%;">
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>kekayan's Resume</title>
+  <title>Arunkumar's Resume</title>
 </head>
   <body style="width:100%; height:100%; margin:0;">
     <iframe src="https://docs.google.com/gview?url=https://github.com/arunkumargithubrepo/resume/raw/main/Arunkumar_BigData_Spark_AWS_9.7yrs_Exp_Immediate_Joining.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
